feat: implemented duplicate check in document registration registration, added skeleton screen, and validated calendars to retrict selection fron today onwards and for the date of birth

--- a/front/gdadc-ui/src/app/modals/create-booking/create-booking.component.html
+++ b/front/gdadc-ui/src/app/modals/create-booking/create-booking.component.html
@@ -23,9 +23,14 @@
         <input formControlName="birthday" type="date" [max]="today"/>
     </label>
 
-    <label>
+    <label class="input-wrapper">
         Document
         <input formControlName="document" />
+        @if (bookingForm.get('document')?.hasError('documentExists')) {
+            <mat-error class="error-message">
+                This document number is already registered.
+            </mat-error>   
+        }
     </label>
 
     <label>
