--- a/front/gdadc-ui/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/front/gdadc-ui/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -29,39 +29,39 @@
 
     <div class="dashboard-card">
         <h2 class="dashboard-subtitle">Passenger Departures and Arrivals</h2>
-        <mat-form-field appearance="outline" class="w-full mb-4">
-            <mat-label>Filtrar</mat-label>
-            <input matInput  placeholder="Digite para filtrar">
+        <mat-form-field appearance="fill">
+          <mat-label> Type to filter </mat-label>
+          <input matInput (keyup)="applyFilter($event)">
         </mat-form-field>
-        <table mat-table  matSort class="mat-elevation-z8 w-full material-table">
-            <ng-container matColumnDef="data">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Data</th>
-                <td mat-cell *matCellDef="let item">{{ item.data }}</td>
-              </ng-container>
-        
-              <ng-container matColumnDef="origem">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Origem</th>
-                <td mat-cell *matCellDef="let item">{{ item.origem }}</td>
-              </ng-container>
-        
-              <ng-container matColumnDef="destino">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Destino</th>
-                <td mat-cell *matCellDef="let item">{{ item.destino }}</td>
-              </ng-container>
-        
-              <ng-container matColumnDef="passageiros_partida">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Partida</th>
-                <td mat-cell *matCellDef="let item">{{ item.passageiros_partida }}</td>
-              </ng-container>
-        
-              <ng-container matColumnDef="passageiros_chegada">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Chegada</th>
-                <td mat-cell *matCellDef="let item">{{ item.passageiros_chegada }}</td>
-              </ng-container>
-        
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-            <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        <div class="table-container">
+          <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-full material-table">
+      
+            <ng-container matColumnDef="date">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+              <td mat-cell *matCellDef="let element"> {{element.date | date: 'dd/MM/yyyy'}} </td>
+            </ng-container>
+      
+            <ng-container matColumnDef="iatapair">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> IATA pair </th>
+              <td mat-cell *matCellDef="let element"> {{formatCategoryLabel(element.iatapair)}} </td>
+            </ng-container>
+      
+            <ng-container matColumnDef="departures">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Departures </th>
+              <td mat-cell *matCellDef="let element"> {{ element.departures }} </td>
+            </ng-container>
+      
+            <ng-container matColumnDef="arrivals">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Arrivals </th>
+              <td mat-cell *matCellDef="let element"> {{element.arrivals}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+      
+        <mat-paginator [pageSize]="50" [pageSizeOptions]="[5, 10, 20, 50, 150, 300, 500, 700, 1000]" showFirstLastButtons>
+        </mat-paginator>
     </div>
 </section>
