--- a/front/gdadc-ui/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/front/gdadc-ui/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -4,7 +4,11 @@
         <div class="dashboard-card">
             <h2 class="dashboard-subtitle">Passenger Departures per Date</h2>
             <div class="material-chart-container">
-              @if(charts[0]){
+              @if(!charts[0]){
+                <div class="skeleton-bar-chart">
+                  <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
+                </div>
+              }@else { 
                 <app-chart [data]="charts[0]" color="#FF7300"></app-chart>
               }
             </div>
@@ -12,7 +16,11 @@
         <div class="dashboard-card">
           <h2 class="dashboard-subtitle">Passenger Arrivals per Date</h2>
             <div class="material-chart-container">
-              @if(charts[1]){
+              @if(!charts[1]){
+                <div class="skeleton-bar-chart">
+                  <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
+                </div>
+              }@else {
                 <app-chart [data]="charts[1]" color="#FF7300"></app-chart>
               }
             </div>
@@ -20,7 +28,11 @@
         <div class="dashboard-card md:col-span-2">
             <h2 class="dashboard-subtitle">Passengers per Route</h2>
             <div class="material-chart-container">
-              @if(charts[2]){
+              @if(!charts[2]){
+                <div class="skeleton-bar-chart">
+                  <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
+                </div>
+              }@else {
                 <app-chart [data]="charts[2]" color="#FF7300"></app-chart>
               }
             </div>
@@ -28,38 +40,54 @@
     </div>
 
     <div class="dashboard-card">
-        <h2 class="dashboard-subtitle">Passenger Departures and Arrivals</h2>
-        <mat-form-field appearance="fill">
-          <mat-label> Type to filter </mat-label>
-          <input matInput (keyup)="applyFilter($event)">
-        </mat-form-field>
-        <div class="table-container">
-          <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-full material-table">
-      
-            <ng-container matColumnDef="date">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-              <td mat-cell *matCellDef="let element"> {{element.date | date: 'dd/MM/yyyy'}} </td>
-            </ng-container>
-      
-            <ng-container matColumnDef="iatapair">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> IATA pair </th>
-              <td mat-cell *matCellDef="let element"> {{formatCategoryLabel(element.iatapair)}} </td>
-            </ng-container>
-      
-            <ng-container matColumnDef="departures">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Departures </th>
-              <td mat-cell *matCellDef="let element"> {{ element.departures }} </td>
-            </ng-container>
-      
-            <ng-container matColumnDef="arrivals">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Arrivals </th>
-              <td mat-cell *matCellDef="let element"> {{element.arrivals}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
+      @if (isLoading) {
+        
+        <div class="title-and-filter">
+            <div class="skeleton skeleton-title"></div>
+            <div class="skeleton skeleton-filter"></div>
         </div>
+        <div class="table-container">
+          <div class="skeleton-table">
+            <div *ngFor="let i of [1,2,3,4,5]" class="skeleton skeleton-row"></div>
+          </div>
+        </div>
+      }@else {
+        <div class="title-and-filter">
+          <h2 class="dashboard-subtitle">Passenger Departures and Arrivals</h2>
+          <mat-form-field appearance="fill" class="filter">
+            <mat-label> Type to filter </mat-label>
+            <input matInput (keyup)="applyFilter($event)">
+          </mat-form-field>
+        </div>
+  
+          <div class="table-container">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-full material-table">
+        
+              <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+                <td mat-cell *matCellDef="let element"> {{element.date | date: 'dd/MM/yyyy'}} </td>
+              </ng-container>
+        
+              <ng-container matColumnDef="iatapair">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> IATA pair </th>
+                <td mat-cell *matCellDef="let element"> {{formatCategoryLabel(element.iatapair)}} </td>
+              </ng-container>
+        
+              <ng-container matColumnDef="departures">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Departures </th>
+                <td mat-cell *matCellDef="let element"> {{ element.departures }} </td>
+              </ng-container>
+        
+              <ng-container matColumnDef="arrivals">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Arrivals </th>
+                <td mat-cell *matCellDef="let element"> {{element.arrivals}} </td>
+              </ng-container>
+  
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+          </div>
+      }
       
         <mat-paginator [pageSize]="50" [pageSizeOptions]="[5, 10, 20, 50, 150, 300, 500, 700, 1000]" showFirstLastButtons>
         </mat-paginator>
