--- a/front/gdadc-ui/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/front/gdadc-ui/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -4,92 +4,167 @@
         <div class="dashboard-card">
             <h2 class="dashboard-subtitle">Passenger Departures per Date</h2>
             <div class="material-chart-container">
-              @if(!charts[0]){
+                @if(!charts[0]){
                 <div class="skeleton-bar-chart">
-                  <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
+                    <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
                 </div>
-              }@else { 
+                }@else if(charts[0] && !noChartData[0]) {
                 <app-chart [data]="charts[0]" color="#FF7300"></app-chart>
-              }
+                }@else if(noChartData[0]){
+                <div class="not-data-found">
+                    <img src="/img/no-data.png" alt="no-data" />
+                    No data found. Please <strong>upload a CSV file</strong> or <strong>create a new booking</strong>.
+                </div>
+                }
             </div>
         </div>
         <div class="dashboard-card">
-          <h2 class="dashboard-subtitle">Passenger Arrivals per Date</h2>
+            <h2 class="dashboard-subtitle">Passenger Arrivals per Date</h2>
             <div class="material-chart-container">
-              @if(!charts[1]){
+                @if(!charts[1]){
                 <div class="skeleton-bar-chart">
-                  <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
+                    <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
                 </div>
-              }@else {
+                }@else if(charts[1] && !noChartData[1]) {
                 <app-chart [data]="charts[1]" color="#FF7300"></app-chart>
-              }
+                }@else if(noChartData[1]){
+                <div class="not-data-found">
+                    <img src="/img/no-data.png" alt="no-data" />
+                    No data found. Please <strong>upload a CSV file</strong> or <strong>create a new booking</strong>.
+                </div>
+                }
             </div>
         </div>
         <div class="dashboard-card md:col-span-2">
             <h2 class="dashboard-subtitle">Passengers per Route</h2>
             <div class="material-chart-container">
-              @if(!charts[2]){
+                @if(!charts[2]){
                 <div class="skeleton-bar-chart">
-                  <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
+                    <div class="bar" *ngFor="let bar of [1,2,3,4,5,6,7]"></div>
                 </div>
-              }@else {
+                }@else if(charts[2] && !noChartData[2]) {
                 <app-chart [data]="charts[2]" color="#FF7300"></app-chart>
-              }
+                }@else if(noChartData[2]){
+                <div class="not-data-found">
+                    <img src="/img/no-data.png" alt="no-data" />
+                    No data found. Please <strong>upload a CSV file</strong> or <strong>create a new booking</strong>.
+                </div>
+                }
             </div>
         </div>
     </div>
 
     <div class="dashboard-card">
-      @if (isLoading) {
-        
+        @if (isLoading) {
+
         <div class="title-and-filter">
             <div class="skeleton skeleton-title"></div>
             <div class="skeleton skeleton-filter"></div>
         </div>
         <div class="table-container">
-          <div class="skeleton-table">
-            <div *ngFor="let i of [1,2,3,4,5]" class="skeleton skeleton-row"></div>
-          </div>
+            <div class="skeleton-table">
+                <div *ngFor="let i of [1,2,3,4,5]" class="skeleton skeleton-row"></div>
+            </div>
         </div>
-      }@else {
+        }@else if(!isLoading && dataSource.data.length > 0) {
         <div class="title-and-filter">
-          <h2 class="dashboard-subtitle">Passenger Departures and Arrivals</h2>
-          <mat-form-field appearance="fill" class="filter">
-            <mat-label> Type to filter </mat-label>
-            <input matInput (keyup)="applyFilter($event)">
-          </mat-form-field>
+            <h2 class="dashboard-subtitle">Passenger Departures and Arrivals</h2>
+            <mat-form-field appearance="fill" class="filter">
+                <mat-label> Type to filter </mat-label>
+                <input matInput (keyup)="applyFilter($event)">
+            </mat-form-field>
         </div>
-  
-          <div class="table-container">
+
+        <div class="table-container">
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-full material-table">
-        
-              <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-                <td mat-cell *matCellDef="let element"> {{element.date | date: 'dd/MM/yyyy'}} </td>
-              </ng-container>
-        
-              <ng-container matColumnDef="iatapair">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> IATA pair </th>
-                <td mat-cell *matCellDef="let element"> {{formatCategoryLabel(element.iatapair)}} </td>
-              </ng-container>
-        
-              <ng-container matColumnDef="departures">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Departures </th>
-                <td mat-cell *matCellDef="let element"> {{ element.departures }} </td>
-              </ng-container>
-        
-              <ng-container matColumnDef="arrivals">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Arrivals </th>
-                <td mat-cell *matCellDef="let element"> {{element.arrivals}} </td>
-              </ng-container>
-  
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.date | date: 'dd/MM/yyyy'}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="departure_iata">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Departure pair </th>
+                    <td mat-cell *matCellDef="let element"> {{element.iatapair.slice(0, 3)}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="arrival_iata">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> IATA pair </th>
+                    <td mat-cell *matCellDef="let element"> {{element.iatapair.slice(3, 6)}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="departures">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Departures </th>
+                    <td mat-cell *matCellDef="let element"> {{ element.departures }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="arrivals">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Arrivals </th>
+                    <td mat-cell *matCellDef="let element"> {{element.arrivals}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-          </div>
-      }
-      
-        <mat-paginator [pageSize]="50" [pageSizeOptions]="[5, 10, 20, 50, 150, 300, 500, 700, 1000]" showFirstLastButtons>
+        </div>
+        <mat-paginator [pageSize]="50" [pageSizeOptions]="[5, 10, 20, 50, 150, 300, 500, 700, 1000]"
+            showFirstLastButtons>
         </mat-paginator>
+        }@else if (!isLoading && this.dataSource.data.length == 0){
+        <div class="title-and-filter">
+            <h2 class="dashboard-subtitle">Passenger Departures and Arrivals</h2>
+            <mat-form-field appearance="fill" class="filter">
+                <mat-label> Type to filter </mat-label>
+                <input matInput [disabled]="disableAllControls" (keyup)="applyFilter($event)">
+            </mat-form-field>
+        </div>
+
+        <div class="table-container">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-full material-table">
+
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.date | date: 'dd/MM/yyyy'}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="departure_iata">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> IATA pair </th>
+                    <td mat-cell *matCellDef="let element"> {{element.iatapair.slice(0, 3)}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="arrival_iata">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> IATA pair </th>
+                    <td mat-cell *matCellDef="let element"> {{element.iatapair.slice(3, 6)}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="departures">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Departures </th>
+                    <td mat-cell *matCellDef="let element"> {{ element.departures }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="arrivals">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Arrivals </th>
+                    <td mat-cell *matCellDef="let element"> {{element.arrivals}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr class="mat-row" *matNoDataRow>
+                    <td [attr.colspan]="displayedColumns.length">
+                        <div class="not-data-found">
+                            <img src="/img/no-data.png" alt="no-data" />
+                            No data found. Please <strong>upload a CSV file</strong> or <strong>create a new
+                                booking</strong>.
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <mat-paginator [pageSize]="50" [pageSizeOptions]="[5, 10, 20, 50, 150, 300, 500, 700, 1000]"
+            showFirstLastButtons>
+        </mat-paginator>
+        }
+
+
     </div>
 </section>
