--- a/front/gdadc-ui/src/app/chart/chart.component.html
+++ b/front/gdadc-ui/src/app/chart/chart.component.html
@@ -1,9 +1,5 @@
 <div class="chart-wrapper">
-    <apx-chart [series]="chartOptions.series" 
-               [chart]="chartOptions.chart" 
-               [xaxis]="chartOptions.xaxis" 
-               [title]="chartOptions.title" 
-               [colors]="chartOptions.colors"
-               [tooltip]="chartOptions.tooltip"
-               [dataLabels]="chartOptions.dataLabels"></apx-chart>
-  </div>
+    <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [xaxis]="chartOptions.xaxis"
+        [title]="chartOptions.title" [colors]="chartOptions.colors" [tooltip]="chartOptions.tooltip"
+        [dataLabels]="chartOptions.dataLabels"></apx-chart>
+</div>
