--- a/front/gdadc-ui/src/app/pages/booking/bookings/bookings.component.scss
+++ b/front/gdadc-ui/src/app/pages/booking/bookings/bookings.component.scss
@@ -2,86 +2,92 @@
     color: #333;
   }
 
-  input[type="text"], input[type="date"], button {
+  input[type="text"],
+  input[type="date"],
+  button {
     padding: 10px;
     margin: 5px 0;
     border-radius: 5px;
     border: 1px solid #ddd;
     font-size: 14px;
   }
-  
-  input[type="text"]:focus, input[type="date"]:focus, button:focus {
+
+  input[type="text"]:focus,
+  input[type="date"]:focus,
+  button:focus {
     outline: none;
     border-color: #007bff;
   }
-  
+
   button {
     background-color: #007bff;
     color: white;
     cursor: pointer;
     border: none;
-    &:hover{
+
+    &:hover {
       background-color: #0056b3;
     }
   }
-  
+
   .filter-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 20px;
     flex-wrap: wrap;
-  
+
     .mat-form-field-appearance-fill {
       width: 45%;
+
       ::ng-deep .mat-mdc-text-field-wrapper {
         background-color: #ffffff;
       }
     }
   }
-  
 
-.material-table {
-  width: 100%;
-  border-collapse: collapse;
-  min-width: 450px;
 
-  th,
-  td {
-    padding: 12px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
+  .material-table {
+    width: 100%;
+    border-collapse: collapse;
+    min-width: 450px;
+
+    th,
+    td {
+      padding: 12px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    thead {
+      background-color: #f5f5f5;
+      font-weight: bold;
+    }
+
+    tr:hover {
+      background-color: hsl(var(--muted));
+    }
+
+    tr.mat-mdc-header-row.mdc-data-table__header-row.cdk-header-row {
+      position: sticky;
+      top: 0;
+      background-color: #fff;
+      z-index: 1;
+    }
   }
-
-  thead {
-    background-color: #f5f5f5;
-    font-weight: bold;
-  }
-
-  tr:hover {
-    background-color: hsl(var(--muted));
-  }
-
-  tr.mat-mdc-header-row.mdc-data-table__header-row.cdk-header-row {
-    position: sticky;
-    top: 0;
-    background-color: #fff;
-    z-index: 1;
-  }
-}
 
 
   .material-table tr:hover {
     background-color: hsl(var(--muted));
   }
-  
+
   .material-table th,
   .material-table td {
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
   }
-  
+
   .material-table thead {
     background-color: #f5f5f5;
     font-weight: bold;
@@ -93,115 +99,122 @@
     max-height: calc(100vh - 264px);
   }
 
-.table-actions {
-  display: flex;
-  gap: 10px; 
-}
-
-.material-btn-outline {
-  background-color: hsl(var(--primary-title));
-  border: 2px solid hsl(var(--primary-title));
-  color: #fff; 
-  padding: 8px 16px;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-  gap: 8px; 
-  cursor: pointer;
-  transition: all 0.3s ease;
-  border-radius: 4px; 
-  &:hover{
-    background-color: hsl(var(--primary-title)); 
-    color: #fff; 
-  }
-  &:disabled{
-    opacity: 0.5; 
-    cursor: not-allowed;  
-  }
-}
-
-.material-symbol {
-  font-size: 18px; 
-}
-
-.mat-form-field {
-  flex-grow: 1; 
-}
-
-.skeleton {
-  background-color: #e0e0e0;
-  border-radius: 4px;
-  animation: pulse 1.5s infinite ease-in-out;
-}
-
-.skeleton-title {
-  width: 240px;
-  height: 36px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  display: inline-block;
-}
-
-.skeleton-btn {
-  width: 140px;
-  height: 36px;
-  margin-right: 10px;
-  display: inline-block;
-}
-
-.skeleton-input {
-  width: 300px;
-  height: 56px;
-  margin-top: 10px;
-}
-
-.skeleton-table {
-  padding: 1rem;
-}
-
-.skeleton-row {
-  height: 48px;
-  margin-bottom: 10px;
-  border-radius: 4px;
-}
-
-::ng-deep .swal2-container.swal2-top-end.swal2-backdrop-show{
-    width: 401px;
-}
-
-
-@keyframes pulse {
-  0% {
-    background-color: #e0e0e0;
-  }
-  50% {
-    background-color: #f0f0f0;
-  }
-  100% {
-    background-color: #e0e0e0;
-  }
-}
-
-@media (max-width: 768px) {
-  .filter-title {
-    flex-direction: column; 
-    align-items: flex-start; 
-  }
-
   .table-actions {
-    margin-top: 10px; 
+    display: flex;
+    gap: 10px;
   }
 
   .material-btn-outline {
-    width: 100%; 
-    margin-bottom: 10px; 
-  }
-  .booking-form input[type="text"], .booking-form input[type="date"] {
-    width: 100%;
-    margin-right: 0;
+    background-color: hsl(var(--primary-title));
+    border: 2px solid hsl(var(--primary-title));
+    color: #fff;
+    padding: 8px 16px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border-radius: 4px;
+
+    &:hover {
+      background-color: hsl(var(--primary-title));
+      color: #fff;
+    }
+
+    &:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
   }
 
-  .booking-table th, .booking-table td {
-    padding: 10px;
+  .material-symbol {
+    font-size: 18px;
   }
-}
+
+  .mat-form-field {
+    flex-grow: 1;
+  }
+
+  .skeleton {
+    background-color: #e0e0e0;
+    border-radius: 4px;
+    animation: pulse 1.5s infinite ease-in-out;
+  }
+
+  .skeleton-title {
+    width: 240px;
+    height: 36px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    display: inline-block;
+  }
+
+  .skeleton-btn {
+    width: 140px;
+    height: 36px;
+    margin-right: 10px;
+    display: inline-block;
+  }
+
+  .skeleton-input {
+    width: 300px;
+    height: 56px;
+    margin-top: 10px;
+  }
+
+  .skeleton-table {
+    padding: 1rem;
+  }
+
+  .skeleton-row {
+    height: 48px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+  }
+
+  ::ng-deep .swal2-container.swal2-top-end.swal2-backdrop-show {
+    width: 401px;
+  }
+
+
+  @keyframes pulse {
+    0% {
+      background-color: #e0e0e0;
+    }
+
+    50% {
+      background-color: #f0f0f0;
+    }
+
+    100% {
+      background-color: #e0e0e0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .filter-title {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .table-actions {
+      margin-top: 10px;
+    }
+
+    .material-btn-outline {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+
+    .booking-form input[type="text"],
+    .booking-form input[type="date"] {
+      width: 100%;
+      margin-right: 0;
+    }
+
+    .booking-table th,
+    .booking-table td {
+      padding: 10px;
+    }
+  }
